opam-version: "2.0"
name: "belt"
version: "1.0.0"
synopsis: "Bucklescript's Belt library packaged for native ocaml"
description: "Bucklescript's Belt library packaged for native ocaml"
maintainer: "Jared Forsyth"
authors: "Jared Forsyth"
homepage: "https://github.com/jaredly/belt"
dev-repo: "git+https://git@github.com:jaredly/belt.git"
bug-reports: "https://github.com/jaredly/belt/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {build}
  "ocaml" { >= "4.02.0" }
]

